exports[`Bankers GUI (not wrapped in SetupContainer) rendering and behaviour Renders as expected (compared to a snapshot) when proxies are connected 1`] = `
<div
  className="Bankers">
  <form
    className="BankersForm"
    onSubmit={[Function]}>
    <h4>
      Bankers Celebration Dinner
    </h4>
    <p>
      ...but who should pay?
    </p>
    <label
      htmlFor="joinName">
      Join meal as
    </label>
    <input
      disabled=""
      id="joinName"
      onChange={[Function]}
      type="text"
      value="" />
    <label
      htmlFor="bonusValue">
      Bonus
    </label>
    <input
      disabled=""
      id="bonusValue"
      onChange={[Function]}
      type="text"
      value="" />
    <input
      disabled=""
      type="submit"
      value="Send" />
    <p
      className="smallText">
      
    </p>
  </form>
  <div
    className="BankersTable">
    <div
      className="place"
      style={
        Object {
          "transform": "translate(0rem, -8.2rem) rotate(180deg)",
        }
      }>
      <div
        className="place-setting">
        <div
          style={
            Object {
              "transform": "rotate(-180deg)",
            }
          }>
          
        </div>
      </div>
    </div>
    <div
      className="place"
      style={
        Object {
          "transform": "translate(5.8rem, -5.8rem) rotate(225deg)",
        }
      }>
      <div
        className="place-setting">
        <div
          style={
            Object {
              "transform": "rotate(-225deg)",
            }
          }>
          
        </div>
      </div>
    </div>
    <div
      className="place"
      style={
        Object {
          "transform": "translate(8.2rem, 0rem) rotate(270deg)",
        }
      }>
      <div
        className="place-setting">
        <div
          style={
            Object {
              "transform": "rotate(-270deg)",
            }
          }>
          
        </div>
      </div>
    </div>
    <div
      className="place"
      style={
        Object {
          "transform": "translate(5.8rem, 5.8rem) rotate(315deg)",
        }
      }>
      <div
        className="place-setting">
        <div
          style={
            Object {
              "transform": "rotate(-315deg)",
            }
          }>
          
        </div>
      </div>
    </div>
    <div
      className="place"
      style={
        Object {
          "transform": "translate(0rem, 8.2rem) rotate(0deg)",
        }
      }>
      <div
        className="place-setting">
        <div
          style={
            Object {
              "transform": "rotate(-0deg)",
            }
          }>
          
        </div>
      </div>
    </div>
    <div
      className="place"
      style={
        Object {
          "transform": "translate(-5.8rem, 5.8rem) rotate(45deg)",
        }
      }>
      <div
        className="place-setting">
        <div
          style={
            Object {
              "transform": "rotate(-45deg)",
            }
          }>
          
        </div>
      </div>
    </div>
    <div
      className="place"
      style={
        Object {
          "transform": "translate(-8.2rem, 0rem) rotate(90deg)",
        }
      }>
      <div
        className="place-setting">
        <div
          style={
            Object {
              "transform": "rotate(-90deg)",
            }
          }>
          
        </div>
      </div>
    </div>
    <div
      className="place"
      style={
        Object {
          "transform": "translate(-5.8rem, -5.8rem) rotate(135deg)",
        }
      }>
      <div
        className="place-setting">
        <div
          style={
            Object {
              "transform": "rotate(-135deg)",
            }
          }>
          
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bankers GUI (not wrapped in SetupContainer) rendering and behaviour Renders as expected (compared to a snapshot) when proxies are not all connected 1`] = `
<div
  className="Bankers">
  <form
    className="BankersForm"
    onSubmit={[Function]}>
    <h4>
      Bankers Celebration Dinner
    </h4>
    <p>
      ...but who should pay?
    </p>
    <label
      htmlFor="joinName">
      Join meal as
    </label>
    <input
      disabled="disabled"
      id="joinName"
      onChange={[Function]}
      type="text"
      value="" />
    <label
      htmlFor="bonusValue">
      Bonus
    </label>
    <input
      disabled="disabled"
      id="bonusValue"
      onChange={[Function]}
      type="text"
      value="" />
    <input
      disabled="disabled"
      type="submit"
      value="Send" />
    <p
      className="smallText">
      You must be connected to all SPDZ proxies.
    </p>
  </form>
  <div
    className="BankersTable">
    <div
      className="place"
      style={
        Object {
          "transform": "translate(0rem, -8.2rem) rotate(180deg)",
        }
      }>
      <div
        className="place-setting">
        <div
          style={
            Object {
              "transform": "rotate(-180deg)",
            }
          }>
          
        </div>
      </div>
    </div>
    <div
      className="place"
      style={
        Object {
          "transform": "translate(5.8rem, -5.8rem) rotate(225deg)",
        }
      }>
      <div
        className="place-setting">
        <div
          style={
            Object {
              "transform": "rotate(-225deg)",
            }
          }>
          
        </div>
      </div>
    </div>
    <div
      className="place"
      style={
        Object {
          "transform": "translate(8.2rem, 0rem) rotate(270deg)",
        }
      }>
      <div
        className="place-setting">
        <div
          style={
            Object {
              "transform": "rotate(-270deg)",
            }
          }>
          
        </div>
      </div>
    </div>
    <div
      className="place"
      style={
        Object {
          "transform": "translate(5.8rem, 5.8rem) rotate(315deg)",
        }
      }>
      <div
        className="place-setting">
        <div
          style={
            Object {
              "transform": "rotate(-315deg)",
            }
          }>
          
        </div>
      </div>
    </div>
    <div
      className="place"
      style={
        Object {
          "transform": "translate(0rem, 8.2rem) rotate(0deg)",
        }
      }>
      <div
        className="place-setting">
        <div
          style={
            Object {
              "transform": "rotate(-0deg)",
            }
          }>
          
        </div>
      </div>
    </div>
    <div
      className="place"
      style={
        Object {
          "transform": "translate(-5.8rem, 5.8rem) rotate(45deg)",
        }
      }>
      <div
        className="place-setting">
        <div
          style={
            Object {
              "transform": "rotate(-45deg)",
            }
          }>
          
        </div>
      </div>
    </div>
    <div
      className="place"
      style={
        Object {
          "transform": "translate(-8.2rem, 0rem) rotate(90deg)",
        }
      }>
      <div
        className="place-setting">
        <div
          style={
            Object {
              "transform": "rotate(-90deg)",
            }
          }>
          
        </div>
      </div>
    </div>
    <div
      className="place"
      style={
        Object {
          "transform": "translate(-5.8rem, -5.8rem) rotate(135deg)",
        }
      }>
      <div
        className="place-setting">
        <div
          style={
            Object {
              "transform": "rotate(-135deg)",
            }
          }>
          
        </div>
      </div>
    </div>
  </div>
</div>
`;
